# oxideav-adpcm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: decode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_packet_ima_qt.rs  decode_packet_ima_wav.rs  decode_packet_ms.rs  decode_packet_stream.rs  encode_packet_ima_qt.rs  encode_packet_ima_wav.rs  encode_packet_ms.rs  encode_packet_stream.rs
src/: decoder.rs  dialogic.rs  encoder.rs  ima_qt.rs  ima_wav.rs  lib.rs  ms.rs  tables.rs  yamaha.rs  yamaha_a.rs
tests/: decoder_fuzz.rs  encode_round_trip.rs  encode_validate.rs  encoder_fuzz.rs  ima_wav_3bit.rs  ms_custom_coeffs.rs  oki_wav_tag.rs  verona_avi.rs  wav_decode.rs
