[package]
name = "oxideav-adpcm"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust ADPCM audio decoders (Microsoft, IMA WAV/QuickTime, Yamaha) for oxideav"
repository = "https://github.com/OxideAV/oxideav-adpcm"
homepage = "https://github.com/OxideAV/oxideav-adpcm"
readme = "README.md"
keywords = ["multimedia", "audio", "adpcm", "codec", "wav"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
