[package]
name = "oxideav-adpcm"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust ADPCM audio decoders (Microsoft, IMA WAV/QuickTime, Yamaha) for oxideav"
repository = "https://github.com/OxideAV/oxideav-adpcm"
homepage = "https://github.com/OxideAV/oxideav-adpcm"
readme = "README.md"
keywords = ["multimedia", "audio", "adpcm", "codec", "wav"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
